Improve styles fixes (#72)
* fix datepickers being hidden by fixed elements

* add top nav toggle on mobile

saves more space than having the whole menu showing all the time

* add tracking to menu button

* fix formatting of mobile header

--- a/src/app/features/tracker/components/timer/timer.component.scss
+++ b/src/app/features/tracker/components/timer/timer.component.scss
@@ -8,7 +8,7 @@
   padding: 0px 10px;
   position: fixed;
   width: $content-width;
-  z-index: 9999;
+  z-index: 50;
 
   .display-element {
     font-size: $base-font-size;
@@ -108,7 +108,7 @@
 @media only screen and (max-width: $small-breakpoint) {
   .timer {
     width: 100%;
-    margin-top: $small-nav-height;
+    margin-top: $small-nav-banner-height;
 
     .display-element {
       font-size: $small-font-size;
